--- a/src/standardStyles/global.css
+++ b/src/standardStyles/global.css
@@ -7,9 +7,6 @@
   }
 
   body {
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-      'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue',
-      Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-      'Segoe UI Symbol';
+    font-family: 'Source Code Pro', monospace;
     background: #ddeefc;
   }
